# Wilkes

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  justfile  lcov.info  tarpaulin.toml
.github/workflows/: build.yml  docker-publish.yml  test.yml
crates/api/: Cargo.toml
crates/api/src/: context.rs  error.rs  lib.rs
crates/api/src/commands/: embed.rs  files.rs  logs.rs  metadata.rs  mod.rs  preview.rs  search.rs  settings.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  logging.rs  path.rs  types.rs
crates/core/src/embed/: candle.rs  chunk.rs  dispatch.rs  fastembed.rs  hf_cache.rs  hf_hub.rs  index.rs  installer.rs  mod.rs  sbert.rs  watcher.rs  worker_ipc.rs  worker_manager.rs
crates/core/src/embed/engines/: aux_config.rs  candle.rs  dispatch.rs  fastembed.rs  mod.rs  sbert.rs
crates/core/src/embed/index/: chunk.rs  db.rs  index.rs  mod.rs  watcher.rs
crates/core/src/embed/models/: downloader.rs  hf_cache.rs  hf_hub.rs  installer.rs  mod.rs
crates/core/src/embed/worker/: embedder.rs  ipc.rs  manager.rs  mod.rs  process.rs  python_env.rs  runtime.rs
crates/core/src/embed/worker/process/: mod.rs  unix.rs  windows.rs
crates/core/src/extract/: mod.rs
crates/core/src/extract/pdf/: backend.rs  mod.rs  mupdf.rs
crates/core/src/metadata/: doi.rs  mod.rs  pdf.rs  text.rs
crates/core/src/search/: grep.rs  mod.rs  semantic.rs
crates/desktop/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/resources/: PDFiumConfig.cmake
crates/desktop/src/: lib.rs  main.rs  platform.rs  worker_main.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs
crates/server/src/http/: errors.rs  mod.rs  search.rs  state.rs
crates/worker/: Cargo.toml  requirements.txt  wilkes_worker.py
crates/worker/src/: main.rs
crates/worker/wilkes_python_worker/: __init__.py  __main__.py  extraction.py  handlers.py  models.py  protocol.py
crates/worker/wilkes_worker/: __init__.py  __main__.py  db.py  handlers.py  ipc.py
docs/: architecture.md  candle-embedder.md  candle-metal-performance.md  semantic-gui.md  web.md
docs/internal/: coverage-refactor-plan.md  high-coverage-refactor-spec.md
docs/internal/architecture/: state-machines.md
docs/specs/: app.md  semantic.md  settings-modal.md  unified-semantic-refactor.md
scripts/: pr_coverage_report.py  prepare-sidecar.mjs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  main.tsx  styles.css
ui/src/components/: ChunkingPanel.test.tsx  ChunkingPanel.tsx  ContextMenu.tsx  DataPanel.test.tsx  DataPanel.tsx  DirectoryPicker.test.tsx  DirectoryPicker.tsx  ExtensionFilter.test.tsx  ExtensionFilter.tsx  ExtensionsPanel.test.tsx  ExtensionsPanel.tsx  LogsPanel.test.tsx  LogsPanel.tsx  PreviewPane.test.tsx  PreviewPane.tsx  ResultList.test.tsx  ResultList.tsx  SearchBar.test.tsx  SearchBar.tsx  SemanticPanel.test.tsx  SemanticPanel.tsx  SettingsModal.test.tsx  SettingsModal.tsx  Toast.test.tsx  Toast.tsx  UploadZone.test.tsx  UploadZone.tsx  WorkersPanel.test.tsx  WorkersPanel.tsx
ui/src/components/preview/: CodeViewer.test.tsx  CodeViewer.tsx  PdfViewer.test.tsx  PdfViewer.tsx  usePdfInnerSearch.test.ts  usePdfInnerSearch.ts  usePdfPageMetrics.test.ts  usePdfPageMetrics.ts
ui/src/hooks/: useGlobalEvents.test.ts  useGlobalEvents.ts  useHistory.test.ts  useHistory.ts  useTauriEvents.test.ts  useTauriEvents.ts
ui/src/lib/: externalLinks.ts  fileActions.ts  semantic.ts  types.ts
ui/src/lib/utils/: dialog.ts  flattenResults.test.ts  flattenResults.ts
ui/src/services/: api.ts  http.test.ts  http.ts  index.ts  tauri.test.ts  tauri.ts
ui/src/stores/: useSearchStore.test.ts  useSearchStore.ts  useSemanticStore.test.ts  useSemanticStore.ts  useSettingsStore.test.ts  useSettingsStore.ts
ui/src/test/: setup.ts
