[package]
name = "wilkes-api"
version = "0.1.0"
edition = "2021"

[dependencies]
wilkes-core = { path = "../core" }
anyhow = "1"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "fs", "sync", "time"] }
dirs = "5"
thiserror = "2"
