[package]
name = "wilkes-api"
version = "0.1.0"
edition = "2021"

[dependencies]
wilkes-core = { path = "../core" }
anyhow = "1"
tracing = "0.1"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "fs", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = "0.3"
wilkes-core = { path = "../core", features = ["test-utils"] }
