[package]
name = "wilkes-core"
version = "0.1.0"
edition = "2021"

[features]
fastembed = ["dep:fastembed", "dep:hf-hub", "dep:ureq", "dep:ort"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub", "dep:ureq"]
metal = ["candle", "candle-core/metal", "candle-core/accelerate", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
infer = "0.16"
mupdf = "0.6"
regex = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
notify-debouncer-mini = "0.4"
text-splitter = { version = "0.27", features = ["markdown"] }
async-trait = "0.1"

[dependencies.ort]
version = "=2.0.0-rc.11"
optional = true
features = ["coreml"]

[dependencies.fastembed]
version = "5"
optional = true

[dependencies.hf-hub]
version = "0.4"
optional = true

[dependencies.ureq]
version = "2"
optional = true

[dependencies.candle-core]
version = "0.9"
optional = true

[dependencies.candle-nn]
version = "0.9"
optional = true

[dependencies.candle-transformers]
version = "0.9"
optional = true

[dependencies.tokenizers]
version = "0.20"
optional = true
