[package]
name = "wilkes-core"
version = "0.9.2"
edition = "2021"

[features]
default = ["fastembed", "candle"]
test-utils = []
fastembed = ["dep:fastembed", "dep:hf-hub", "dep:ureq", "dep:ort"]
fastembed-coreml = ["fastembed", "ort/coreml"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub", "dep:ureq"]
candle-metal = ["candle", "candle-core/metal", "candle-core/accelerate", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
infer = "0.16"
mupdf = "0.6"
regex = "1"
dirs = "5"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = "0.4"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync", "process", "io-util", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
notify-debouncer-mini = "0.4"
text-splitter = { version = "0.27", features = ["markdown"] }
async-trait = "0.1"
libc = "0.2"
sqlite-vec = "0.1.9"
strip-ansi-escapes = "0.2.1"
which = "6"

[dependencies.ort]
version = "=2.0.0-rc.11"
optional = true

[dependencies.fastembed]
version = "5"
optional = true

[dependencies.hf-hub]
version = "0.4"
optional = true

[dependencies.ureq]
version = "2"
optional = true

[dependencies.candle-core]
version = "0.9"
optional = true

[dependencies.candle-nn]
version = "0.9"
optional = true

[dependencies.candle-transformers]
version = "0.9"
optional = true

[dependencies.tokenizers]
version = "0.20"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.candle-core]
version = "0.9"
optional = true
features = ["metal", "accelerate"]

[target.'cfg(target_os = "macos")'.dependencies.candle-nn]
version = "0.9"
optional = true
features = ["metal"]

[target.'cfg(target_os = "macos")'.dependencies.candle-transformers]
version = "0.9"
optional = true
features = ["metal"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3.10"
mockall = "0.13"
mockito = "1.4"
base64 = "0.22.1"
wilkes-core = { path = ".", features = ["test-utils"] }
