[package]
name = "wilkes-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "wilkes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wilkes-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
wilkes-api = { path = "../api" }
wilkes-core = { path = "../core", features = ["metal"] }
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "5"
