[package]
name = "wilkes-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wilkes-server"

[dependencies]
wilkes-api = { path = "../api" }
wilkes-core = { path = "../core", default-features = false, features = ["fastembed", "candle"] }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
wilkes-core = { path = "../core", features = ["test-utils"] }
