[package]
name = "wilkes-rust-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wilkes-rust-worker"
path = "src/main.rs"

[features]
fastembed-coreml = ["wilkes-core/fastembed-coreml"]

[dependencies]
wilkes-core = { path = "../core" }
wilkes-api = { path = "../api" }
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
wilkes-core = { path = "../core", features = ["test-utils"] }
